--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "cookie"
   ],
   "dependencies": {
-    "debug": "^2.1.3",
-    "parse-accept-language": "^1.0.0"
+    "debug": "~4",
+    "parse-accept-language": "~2"
   },
   "devDependencies": {
-    "jshint": "^2.7.0",
-    "mocha": "^2.2.4",
-    "should": "^6.0.1"
+    "jshint": "~2",
+    "mocha": "~7",
+    "should": "~13"
   },
   "scripts": {
     "test": "make check"
