--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "email": "pirxpilot@furkot.com",
     "url": "https://pirxpilot.me"
   },
-  "repository": "pirxpilot/overwrite-language",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pirxpilot/overwrite-language.git"
+  },
   "license": "MIT",
   "keywords": [
     "overwrite-language",
