replace mocha/should with node:test and node:assert

--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "parse-accept-language": "~2"
   },
   "devDependencies": {
-    "jshint": "~2",
-    "mocha": "~7",
-    "should": "~13"
+    "@pirxpilot/jshint": "~3"
   },
   "scripts": {
     "test": "make check"
